--- a/node-projects/package.json
+++ b/node-projects/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "http-status-codes": "^2.3.0"
+    "http-status": "^2.0.0",
+    "http-status-codes": "^2.3.0",
+    "inquirer": "^12.1.0",
+    "yargs": "^17.7.2"
   }
 }
