--- a/typescript-projects/.eslintrc.json
+++ b/typescript-projects/.eslintrc.json
@@ -1,16 +1,27 @@
 {
-    "extends": "eslint:recommended",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 8,
+        "ecmaVersion": 2023,
         "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ],
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/ban-ts-comment": "warn"
     },
     "env": {
         "node": true,
-        "es6": true,
-        "mocha": true
-    },
-    "rules": {
-        "no-console": 0,
-        "no-unused-vars": 1
+        "es6": true
     }
 }
